k8s/nginx-test-set.yaml
# deployment로 만들어내기
# kubectl expose deployment nginx-deployment -n test --port=88 --target-port=80 --type=LoadBalancer
# 노드포트나 IP 쓰는 중인지는 netstat 으로 확인 못함
# svclb pod가 만들어짐
apiVersion: v1
kind: Service
metadata:
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: nginx
  name: nginx-deployment
  namespace: test
spec:
  allocateLoadBalancerNodePorts: true
  # 랜덤생성됨
  # clusterIP: 10.43.236.1
  # clusterIPs:
  # - 10.43.236.1
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - # 호스트 포트
    port: 88
    protocol: TCP
    # 컨테이너 포트
    targetPort: 80
    # 랜덤생성됨
    # nodePort: 31437
  selector:
    app: nginx
  # 클라이언트가 매번 같은 컨테이너로 가는지 등 설정
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    # 일단 ifconfig의 eth0으로만 해봤음
    - ip: 0.0.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: test
  labels:
    app: nginx
spec:
  minReadySeconds: 5
  # deploy 대기 시간 후 실패처리
  progressDeadlineSeconds: 600
  # pod 수
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: rollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  # pod 설정과 똑같음
  template:
    metadata:
      # pod 라벨 지정
      labels:
        app: nginx
    spec:
      # 파일로 configmap 전달하기
      # 볼륨 정의하고 container에서 마운트
      # cm 설정
      volumes:
      - name: config
        configMap:
          name: cm-nginx
      # pvc 설정
      - name: pvc
        persistentVolumeClaim:
          claimName: test-pvc
      containers:
      - name: nginx
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        # 위의 볼륨이름을 가져와야함
        - name: config
          mountPath: /etc/nginx/conf.d
          readOnly: true
        - name: pvc
          mountPath: /var/www/html

        # 환경변수로 configmap 전달하기
        # env:
        # - name: LANGUAGE
        #   valueFrom:
        #     configMapKeyRef:
        #       name: cm-name
        #       key: language
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          limits:
            memory: 64Mi
            cpu: 500m
          requests:
            memory: 64Mi
            cpu: 500m
        
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
