k8s/nginx-php.yaml


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-nginx
  namespace: test-honghong
spec:
  ingressClassName: nginx
  # defaultBackend:
  #   service:
  #     name: nginx
  #     port:
  #       number: 80
  tls:
  - hosts:
    - domain.com
    secretName: sample-nginx
  rules:
  - host: domain.com
    http:
      paths:
      - path: /
        pathType: Prefix ## Exact ImplementationSpecific
        backend:
          service:
            name: sample-nginx
            port:
              number: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-honghong
  name: sample-nginx
  labels:
    app: sample-nginx
spec:
  # 타임아웃
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: sample-nginx
  template:
    metadata:
      labels:
        app: sample-nginx
    spec:
      # 여기서는 Always만 가능
      restartPolicy: Always
      affinity:
        nodeAffinity:

          # 우선순위 노드 없으면 아무데나
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            preference:
              matchExpressions:
              - key: app
                operator: In
                values:
                - web

          # 일치하는 노드 없으면 안만듬  계속 대기
          # requiredDuringSchedulingIgnoredDuringExecution:
          #   nodeSelectorTerms:
          #   - matchExpressions:
          #     - key: app
          #       operator: In
          #       values:
          #       - web
          #   topologyKey: kubernetes.io/hostname

      # schedulerName: default-scheduler
      # securityContext: {}
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30

      # https://github.com/kubernetes/git-sync
      containers:

      - name: php-fpm
        image: bitnami/php-fpm:7.4.33
        imagePullPolicy: IfNotPresent
        # /opt/bitnami/php/etc
        volumeMounts:
        - mountPath: /var/www/html/web/storage
          name: web-upload
        - mountPath: /var/www/html/
          name: pay-web
        # php.ini php-fpm.conf php-conf.d conf.d
        - mountPath: /opt/bitnami/php/etc/php-fpm.conf
          readOnly: true
          name: php-fpm-conf
          subPath: php-fpm.conf
        - mountPath: /opt/bitnami/php/etc/php.ini
          readOnly: true
          name: php-ini
          subPath: php.ini
        ports:
        - containerPort: 9000
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 9000
          successThreshold: 1
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          tcpSocket:
            port: 9000
          successThreshold: 1
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
        lifecycle:
          postStart:
            exec:
              # command: ['sh', '-c', 'mkdir -p /var/www/html/web/storage/log && find -type d -exec chmod 755 {} \; && find -type f -exec chmod 644 {} \;']
              # 나중에 줄이기 ㄱㄱ
              command:
              - sh
              - -c
              - mkdir -p /var/www/html/web/storage/log && mkdir -p /var/www/html/web/storage/data && mkdir -p /var/www/html/web/storage/upload && mkdir -p /var/www/html/web/storage/image && mkdir -p /var/www/html/web/storage/cache && find -type d -exec chmod 755 {} \; && find -type f -exec chmod 644 {} \; && chown daemon -R /var/www/html/web/storage
        # resources:
        #   limits:
        #     memory: 16Mi
        #     cpu: 100m
        #     # ephemeral-storage: "2Gi"
        #   requests:
        #     memory: 16Mi
        #     cpu: 100m
        #     # ephemeral-storage: "2Gi"

      - name: nginx
        # image: ubuntu-nginx
        image: nginx:stable-alpine3.17-slim
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            # httpHeaders:
            #   - name: myheader
            #     value: good
            port: 80
          successThreshold: 1
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            # httpHeaders:
            #   - name: myheader
            #     value: good
            port: 80
          successThreshold: 1
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1

        volumeMounts:
        - mountPath: /var/www/html/web/storage
          name: web-upload
        - mountPath: /var/www/html
          name: pay-web
        - mountPath: /etc/nginx/nginx.conf
          readOnly: true
          name: nginx-conf
          subPath: nginx.conf
        - mountPath: /etc/nginx/conf.d
          readOnly: true
          name: nginx-conf-host
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        # resources:
        #   limits:
        #     memory: 64Mi
        #     cpu: 500m
        #     # ephemeral-storage: "2Gi"
        #   requests:
        #     memory: 64Mi
        #     cpu: 500m
        #     # ephemeral-storage: "2Gi"

      volumes:
      # 웹서버 업로드폴더
      - name: web-upload
        persistentVolumeClaim:
          claimName: sample-nginx
      # git 받아올부분
      - name: pay-web
        emptyDir: {}
      - name: php-fpm-conf
        configMap:
          name: sample-php-fpm
          items:
          - key: php-fpm.conf
            path: php-fpm.conf
      - name: php-ini
        configMap:
          name: sample-php-fpm
          items:
          - key: php.ini
            path: php.ini
      - name: nginx-conf
        configMap:
          name: sample-nginx
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: nginx-conf-host
        configMap:
          name: sample-nginx
          items:
          - key: server.conf
            path: server.conf

---

apiVersion: v1
kind: Service
metadata:
  name: sample-nginx
  namespace: test-honghong
  labels:
    app: sample-nginx
spec:
  # 아이피 범위 10.96.0.0/12 라고 에러뜸
  # clusterIP: 10.96.0.2
  type: NodePort
  # type: ClusterIP
  ports:
  - port: 80
    # 안찍으면 랜덤
    nodePort: 30000
    targetPort: 80
    protocol: TCP
    name: http
  # - port: 443
  #   protocol: TCP
  #   name: https
  selector:
    app: sample-nginx
